<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Добро Пожаловать"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/activityMainTextViewStringFromSecond"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnStartSecond"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activityMainStartSecond" />

    <Button
        android:id="@+id/btnShowToast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activityMainShowToast" />

    <Button
        android:id="@+id/btnStartBrowser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activityMainStartBrowser" />
</LinearLayout>
